<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_courses"
        android:icon="@drawable/document_svgrepo_com"
        android:title="@string/course" />
    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_message"
        android:title="@string/message" />
    <item
        android:id="@+id/nav_document"
        android:icon="@drawable/document_svgrepo_com"
        android:title="@string/document" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />
</menu>