<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_class"
        android:icon="@drawable/ic_course"
    android:title="My Course" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_message"
        android:title="@string/message" />
    <item
        android:id="@+id/navigation_assignment"
        android:icon="@drawable/ic_assignment"
    android:title="@string/assignment" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

</menu>
